src/objects/SurveyQuestionResponse__c.object
<CustomObject>
    <fields>
        <fullName>Brady_Formula__c</fullName>
        <formula>IF( 

OR( 
NPS_Score_Field__c = 10, 
NPS_Score_Field__c = 9,
NPS_Score_Field__c = 8,
NPS_Score_Field__c = 7
), 1, 

IF( 

OR( 
NPS_Score_Field__c = 0, 
NPS_Score_Field__c = 1, 
NPS_Score_Field__c = 2, 
NPS_Score_Field__c = 3, 
NPS_Score_Field__c = 4 
), -1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brady Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Effort_Formula__c</fullName>
        <formula>IF(
Response__c = &apos;Strongly Disagree&apos;, 1, 

IF(
Response__c = &apos;Slightly Disagree&apos;, 2,

IF(
Response__c = &apos;Disagree&apos;, 3,

IF(
Response__c = &apos;Neither Disagree or Agree&apos;, 4,

IF(
Response__c = &apos;Somewhat Agree&apos;, 5,

IF(
Response__c = &apos;Agree&apos;, 6,

If(
Response__c = &apos;Strongly Agree&apos;, 7, 0)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Effort Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detractor__c</fullName>
        <formula>IF(

OR(
Value(Response__c) = 0,
Value(Response__c) = 1,
Value(Response__c) = 2,
Value(Response__c) = 3,
Value(Response__c) = 4,
Value(Response__c) = 5,
Value(Response__c) = 6), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Comments__c</fullName>
        <formula>NOT(ISBLANK(Response__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Agent_Question__c</fullName>
        <formula>IF(CONTAINS(Survey_Question__r.Name, &apos;If you owned your own customer service company, how likely would&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Agent Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Formula__c</fullName>
        <formula>IF(

OR(
Value(Response__c) = 10,
Value(Response__c) = 9
), 1, 

IF(

OR(
Value(Response__c) = 0,
Value(Response__c) = 1,
Value(Response__c) = 2,
Value(Response__c) = 3,
Value(Response__c) = 4,
Value(Response__c) = 5,
Value(Response__c) = 6
), -1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Score_Field__c</fullName>
        <formula>Value(Response__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Score Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Protractor__c</fullName>
        <formula>IF(

OR(
Value(Response__c) = 10,
Value(Response__c) = 9), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Protractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Score__c</fullName>
        <formula>VALUE(Response__c)</formula>
        <label>Response Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SurveyTaker__c</fullName>
        <label>SurveyTaker</label>
        <referenceTo>SurveyTaker__c</referenceTo>
        <relationshipName>Survey_Question_Answers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipName>Survey_Question_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Text_Response__c</fullName>
        <label>Text Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>of_Time_Question_was_Responded_to__c</fullName>
        <defaultValue>1</defaultValue>
        <label># of Time Question was Responded to</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Question Response</label>
    <nameField>
        <displayFormat>Response-{0000000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>